<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_kuliner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/item_row_kuliner" />
    </android.support.v4.widget.NestedScrollView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_main"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@drawable/cook"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/roundedcorner"
        android:contentDescription="@string/profile"
        android:padding="7dp"
        android:src="@drawable/ic_person"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/avenir_bold"
        android:text="@string/menu_kuliner"
        android:textColor="@android:color/white"
        android:layout_marginTop="60dp"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>