<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="8dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:scaleType="centerCrop"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                tools:src="@color/colorAccent"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="100dp"
                android:layout_toEndOf="@id/img_item_photo"
                android:fontFamily="@font/avenir_medium"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
                card_view:layout_constraintTop_toTopOf="parent"
                tools:text="Field Of Name" />

            <TextView
                android:id="@+id/tv_item_remarks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_item_name"
                android:layout_toEndOf="@id/img_item_photo"
                android:fontFamily="@font/avenir_demi"
                android:layout_marginEnd="160dp"
                android:textColor="@android:color/black"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
                card_view:layout_constraintTop_toBottomOf="@+id/tv_item_name"
                tools:text="Remarks" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="40dp"
                android:layout_toEndOf="@id/img_item_photo"
                android:orientation="horizontal"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintStart_toEndOf="@+id/img_item_photo"
                card_view:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/btn_set_favorite"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/favorite"
                    android:textSize="8sp"
                    tools:ignore="SmallSp" />

                <Button
                    android:id="@+id/btn_set_share"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/share"
                    android:textSize="9sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>
        </android.support.constraint.ConstraintLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>
